@@ -1458,6 +1458,13 @@ Thu May 29 15:45:57 CEST 2003
 
 	- Changed parsing of variables to be able to reference one attribute
 	  of the n-th entry in an array of structs.
+	  
+Fri May 30 10:29:49 CEST 2003
+
+	- Synced parser.
+	- Added a dummy rule for EXEC SQL DESCRIBE that throws an error
+	  message.
+	- Some minor cleanup/bug fixing.
 	- Set ecpg version to 2.12.0.
 	- Set ecpg library to 3.4.2.
 	- Set pgtypes library to 1.0.0
